--- a/ethercis-install/v1.2.0/ecis_etc/services.properties
+++ b/ethercis-install/v1.2.0/ecis_etc/services.properties
@@ -25,7 +25,9 @@ server.mode.dialect.root=/rest/v1
 # HTTP configuration
 # https://www.eclipse.org/jetty/documentation/9.4.x/configuring-connectors.html
 server.http.port = 8080
+#Change this to be your public hostname or IP address!
 server.http.host = localhost
+#HTTP configuration
 server.http.output_buffer_size = 32768
 server.http.request_header_size = 8192
 server.http.response_header_size = 8192
@@ -62,18 +64,21 @@ server.cors.allow_methods = CONNECT, DEBUG, DELETE, DONE, GET, HEAD, HTTP, HTTP/
   OPTIONS, ORIGIN, ORIGINS, PATCH, POST, PUT, QUIC, REST, SESSION, SHOULD, SPDY, TRACE, TRACK
 
 # SSL configuration
-# https://www.eclipse.org/jetty/documentation/9.4.x/configuring-ssl.html
-server.http.secure_scheme = https
-server.https.port = 8443
-server.https.host = localhost
-server.https.key_store_path=src/test/resources/config/security/.keystore
-server.https.key_store_password=OBF:20zl1tvf1x1h1ikq1rwf1ino1x151tvn20zh
-server.https.key_manager_password=OBF:20zl1tvf1x1h1ikq1rwf1ino1x151tvn20zh
-server.https.trust_store_path=src/test/resources/config/security/.keystore
-server.https.trust_store_password=OBF:20zl1tvf1x1h1ikq1rwf1ino1x151tvn20zh
-server.https.exclude_cipher_suites=SSL_RSA_WITH_DES_CBC_SHA,SSL_DHE_RSA_WITH_DES_CBC_SHA,SSL_DHE_DSS_WITH_DES_CBC_SHA,\
-                                   SSL_RSA_EXPORT_WITH_RC4_40_MD5,SSL_RSA_EXPORT_WITH_DES40_CBC_SHA,\
-                                   SSL_DHE_RSA_EXPORT_WITH_DES40_CBC_SHA,SSL_DHE_DSS_EXPORT_WITH_DES40_CBC_SHA
+# remove the comments, generate the certificate and configure the keystore
+# see https://www.eclipse.org/jetty/documentation/9.4.x/configuring-ssl.html
+# for more on this
+#-------------------------------------------------------------------------------------------------------------------
+#server.http.secure_scheme = https
+#server.https.port = 8443
+#server.https.host = localhost
+#server.https.key_store_path=/etc/opt/ecis/security/.keystore
+#server.https.key_store_password=OBF:20zl1tvf1x1h1ikq1rwf1ino1x151tvn20zh
+#server.https.key_manager_password=OBF:20zl1tvf1x1h1ikq1rwf1ino1x151tvn20zh
+#server.https.trust_store_path=src/test/resources/config/security/.keystore
+#server.https.trust_store_password=OBF:20zl1tvf1x1h1ikq1rwf1ino1x151tvn20zh
+#server.https.exclude_cipher_suites=SSL_RSA_WITH_DES_CBC_SHA,SSL_DHE_RSA_WITH_DES_CBC_SHA,SSL_DHE_DSS_WITH_DES_CBC_SHA,\
+#                                   SSL_RSA_EXPORT_WITH_RC4_40_MD5,SSL_RSA_EXPORT_WITH_DES40_CBC_SHA,\
+#                                   SSL_DHE_RSA_EXPORT_WITH_DES40_CBC_SHA,SSL_DHE_DSS_EXPORT_WITH_DES40_CBC_SHA
 
 # Resource monitoring
 # https://www.eclipse.org/jetty/documentation/9.3.x/limit-load.html
@@ -118,10 +123,10 @@ ServiceManagerException.logFormat=ServiceManagerException errorCode=[{0}] server
 organization.home=testOrganization
 
 # deprecated
-Security.Server.policy=test/resources/config/policy.xml
+#Security.Server.policy=/etc/opt/ecis/policy.xml
 
 # Nop for current version 21/08/2012 using this key for policy path
-server.security.policy.xml.path=test/resources/config/policy.xml
+#server.security.policy.xml.path=test/resources/config/policy.xml
 
 # security mode SHIRO|JWT. use JWT for token based authentication
 server.security.policy.type=SHIRO
@@ -130,7 +135,7 @@ server.security.policy.type=SHIRO
 # server.jwt.key_file_path=src/test/resources/config/security/jwt.cfg
 
 #path to shiro ini file
-server.security.shiro.inipath=src/test/resources/config/security/authenticate.ini
+server.security.shiro.inipath=/etc/opt/ecis/security/authenticate.ini
 
 # if true (default) force permission at DB level based on subject or role
 server.security.db_role=false
@@ -151,11 +156,11 @@ server.audit = true
 # KnowledgeCache: Knowledge Service parameters
 #---------------------------------------------------------------------------------
 # archetypes (if any).
-knowledge.path.archetype=${user.dir}/../file_repo/knowledge/archetypes
+knowledge.path.archetype=/etc/opt/ecis/knowledge/archetypes
 # openEHR template
-knowledge.path.template=${user.dir}/../file_repo/knowledge/templates
+knowledge.path.template=/etc/opt/ecis/knowledge/templates
 # Operational Templates (required)
-knowledge.path.opt=${user.dir}/../file_repo/knowledge/operational_templates
+knowledge.path.opt=/etc/opt/ecis/knowledge/operational_templates
 # if true, the knowledge cache is pre-loaded initially
 knowledge.forcecache=true
 
