--- a/ethercis-install/v1.3.0/config/logging.properties
+++ b/ethercis-install/v1.3.0/config/logging.properties
@@ -65,7 +65,7 @@ handlers= java.util.logging.ConsoleHandler,java.util.logging.FileHandler, com.et
 # "%h"   the value of the "user.home" system property
 # "%g"   the generation number to distinguish rotated logs
 # "%u"   a unique number to resolve conflicts
-java.util.logging.FileHandler.pattern = C:\\Users\\christian\\Documents\\EtherCIS\\home\\log\\ehrserver%u%g.log
+java.util.logging.FileHandler.pattern = ./ehrserver%u%g.log
 java.util.logging.FileHandler.limit = 1000000
 java.util.logging.FileHandler.count = 10
 java.util.logging.FileHandler.level = FINER
